--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "axios": "^1.12.2",
     "chart.js": "^4.5.0",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.24",
     "react": "^19.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.2.0",
